Bug: dropdown menu en dessous de certaines div (z-index)
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@18479 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/aero-blue/main.css
+++ b/style/aero-blue/main.css
@@ -534,7 +534,7 @@ ul.control_tabs_vertical li a.active {
   border-bottom: 1px solid #AECFF7;
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 1150;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 }
 
@@ -644,13 +644,6 @@ td.tabview {
   padding-top:30px;
 }
 
-.tabmenu {
-  list-style-type: none;
-  padding: 4px 0 0 0;
-  margin: 0;
-  font-weight: bold;
-  background: #eee;
-}
 
 .tabmenu li {
   margin-left: 3px;
